<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailActivity"
    android:scrollbars="vertical"
    android:id="@+id/movie_detail"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ImageView
            android:id="@+id/movie_detail_poster"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/movie_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/movie_detail_poster"
            app:layout_constraintEnd_toEndOf="@+id/movie_detail_poster"
            app:layout_constraintStart_toStartOf="@+id/movie_detail_poster"
            android:text="@string/movie_list_title"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="10sp"/>

        <LinearLayout
            android:id="@+id/movie_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_poster"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10sp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/imdb"/>

            <TextView
                style="@style/MovieDetailsItem"
                android:text="@string/movie_detail_imdb"
                android:id="@+id/movie_detail_imdb"/>
            <TextView
                style="@style/MovieDetailsItem"
                android:text="@string/movie_detail_runtime"
                android:id="@+id/movie_detail_runtime"/>
            <TextView
                style="@style/MovieDetailsItem"
                android:text="@string/movie_list_year"
                android:id="@+id/movie_detail_year"/>
        </LinearLayout>

        <TextView
            style="@style/MovieDetailItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movie_details"
            android:text="@string/movie_detail_description"
            android:id="@+id/movie_detail_description" />

        <TextView
            style="@style/MovieDetailItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_description"
            android:text="@string/movie_detail_actors"
            android:id="@+id/movie_detail_actors"/>
        <TextView
            style="@style/MovieDetailItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_actors"
            android:text="@string/movie_detail_director"
            android:id="@+id/movie_detail_director"/>
        <TextView
            style="@style/MovieDetailItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_director"
            android:text="@string/movie_detail_language"
            android:id="@+id/movie_detail_language"/>
        <TextView
            style="@style/MovieDetailItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_language"
            android:text="@string/movie_detail_production"
            android:id="@+id/movie_detail_production"/>
        <TextView
            style="@style/MovieDetailItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_production"
            android:text="@string/movie_detail_genre"
            android:id="@+id/movie_detail_genre"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>